model added, routes added

--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "homepage": "https://github.com/ubcent/comments-app",
   "dependencies": {
     "express": "~4.13.3",
-    "mongoose": "~4.1.12"
+    "mongoose": "~4.1.12",
+    "angular": "~1.4.7",
+    "body-parser": "~1.14.1"
   }
 }
