--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "tests"
   ],
   "dependencies": {
-    "angular-cookie": "~4.0.9",
-    "angular-resource": "~1.4.7"
+    "angular": "~1.4.7",
+    "angular-resource": "~1.4.7",
+    "angular-moment": "~0.10.3",
+    "ngInfiniteScroll": "~1.2.1"
   }
 }
