--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "express": "~4.13.3",
     "mongoose": "~4.1.12",
     "body-parser": "~1.14.1"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-bower": "^0.20.0"
   }
 }
