--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "angular": "~1.4.7",
     "angular-resource": "~1.4.7",
     "angular-moment": "~0.10.3",
-    "ngInfiniteScroll": "~1.2.1"
+    "ngInfiniteScroll": "~1.2.1",
+    "underscore": "~1.8.3"
   }
 }
